добавила класс контейнер

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </div>
 </section>
 <section class="section">
+    <div class="container">
     <ul class="special list">
     <li class="speciality features">
     <img class="special-item-img" src="../homework-01/images/Vector.svg" alt="Внимание к деталям">
@@ -64,8 +65,10 @@
      что реализация плановых заданий.</p>  
 </li>
 </ul>
+</div>
 </section>
 <section class="section">
+    <div class="container">
 <h2 class="section-subtitle">Чем мы занимаемся</h2>
 <ul class="doing-list list">
     <li class="speciality">
@@ -84,8 +87,10 @@
           <h3 class="subtitle-box">Дизайнерские решения</h3>
     </li>
 </ul>
+</div>
 </section>
 <section class="team section">
+    <div class="container">
     <h2 class="section-subtitle">Наша команда</h2>
    <ul class="our-team list">
     <li class="speciality team-item">
@@ -149,8 +154,10 @@
         </ul>
     </li>
     </ul>
+</div>
 </section>
 <section class="section">
+    <div class="container">
     <h2 class="section-subtitle">Постоянные клиенты</h2>
     <ul class="our-clients list">
         <li class="client-icon speciality">
@@ -172,6 +179,7 @@
             <a href=""><img src="./images/logo6.svg" alt="Company logo 6"/> </a>
         </li>
     </ul>
+</div>
 </section>
 </main>
 <footer class="footer">
