--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     </div>
 </header>
     <main>
-        <div class="button-item">
+        <div class="button-item container">
 <button type='button' class="button">Все</button>
 <button type='button' class="button">Веб-сайты</button>
 <button type='button' class="button">Приложения</button>
@@ -39,6 +39,7 @@
 <button type='button' class="button">Маркетинг</button>
 </div>
 <section>
+    <div class="container">
     <h1 hidden>Portfolio</h1>
     <ul class="portfolio-container list">
         <li class="portfolio-list">
@@ -114,6 +115,7 @@
                 на защищённые сервера конкурентов.</p> </a>
         </li>
     </ul>
+</div>
 </section>
     </main>
     <footer class="footer">
