--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <footer class="footer">
     <div class="container">
   <div class="footer-logo">  
-      <a class="logo link" href="">
+      <a class="logotype link" href="">
     <span class="web">Web</span>Studio
 </a> 
     <address>
@@ -211,7 +211,7 @@
     </li>
 </ul>
 </div>
-<div>
+<div class="footer-subtitle-subtitle">
     <b class="footer-subtitle">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
     <button class="footer-button">Подписаться</button>
 </div>
