--- a/portfolio.html
+++ b/portfolio.html
@@ -120,38 +120,38 @@
     </main>
     <footer class="footer">
         <div class="container">
-      <div class="footer-logo">  
-          <a class="logo link" href="">
-        <span class="web">Web</span>Studio
-    </a> 
-        <address>
-            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-            <a class="footer-mailto" href="mailto:info@example.com">info@example.com</a> <br/>
-            <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
-        </address>
-    </div>
-    <div class="footer-subscribe">
-    <b class="footer-subtitle">ПРИСОЕДИНЯЙТЕСЬ</b>
-    <ul class="footer-icons list">
-        <li class="footer-icons-label"> 
-            <a  href=""><img src="./images/instagram-f.svg" alt="Instagram logo"/> </a>
-        </li>
-        <li class="footer-icons-label"> 
-            <a  href=""> <img src="./images/twitter-f.svg" alt="Twitter logo"/> </a>
-        </li>
-        <li class="footer-icons-label"> 
-            <a  href=""> <img src="./images/facebook-f.svg" alt="Facebook logo"/> </a>
-        </li>
-        <li class="footer-icons-label"> 
-            <a  href=""> <img src="./images/linkedin-f.svg" alt="Linkedin logo"/> </a>
-        </li>
-    </ul>
-    </div>
-    <div>
-        <b class="footer-subtitle">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
-        <button class="footer-button">Подписаться</button>
-    </div>
-        </div>
+            <div class="footer-logo">  
+                <a class="logotype link" href="">
+              <span class="web">Web</span>Studio
+          </a> 
+              <address>
+                  <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+                  <a class="footer-mailto" href="mailto:info@example.com">info@example.com</a> <br/>
+                  <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
+              </address>
+          </div>
+          <div class="footer-subscribe">
+          <b class="footer-subtitle">ПРИСОЕДИНЯЙТЕСЬ</b>
+                  <ul class="footer-icons list">
+              <li class="footer-icons-label"> 
+               <a href=""><img src="./images/instagram-f.svg" alt="Instagram logo"/> </a>
+              </li>
+              <li class="footer-icons-label"> 
+                  <a  href=""> <img src="./images/twitter-f.svg" alt="Twitter logo"/> </a>
+              </li>
+              <li class="footer-icons-label"> 
+                  <a  href=""> <img src="./images/facebook-f.svg" alt="Facebook logo"/> </a>
+              </li>
+              <li class="footer-icons-label"> 
+                  <a  href=""> <img src="./images/linkedin-f.svg" alt="Linkedin logo"/> </a>
+              </li>
+          </ul>
+          </div>
+          <div class="footer-subtitle-subtitle">
+              <b class="footer-subtitle">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
+              <button class="footer-button">Подписаться</button>
+          </div>
+              </div>
     </footer>
       </body>
       </html>
